--- a/js.html
+++ b/js.html
@@ -5,6 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="js.js"></script>
+    <video src="Screencast from 13 ماي, 2024 EEST 10:17:24 م.webm" controls style="width: 100%; height: 600px;"></video>
+    <script src="js.mjs" type="module"></script>
 </body>
 </html>
