--- a/js.html
+++ b/js.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <video src="Screencast from 13 ماي, 2024 EEST 10:17:24 م.webm" controls style="width: 100%; height: 600px;"></video>
-    <script src="js.mjs" type="module"></script>
+    <script src="js.js" type="module"></script>
 </body>
 </html>
